Further condensed the web task functional interfaces and reduced repeat code. Now only one loop function in the retry tool is needed, and I can do every webdriver-related task through that one interface and lambda functions. Did some clean up, organization, refactoring, etc.